[package]
name = "win32rs"
version = "0.1.0"
edition = "2021"

[dependencies]


[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
